objects/echosign_dev1__SIGN_Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Do_No_Overwrite_Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Overwrite Existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Do_Not_Write_Empty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Write Empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Input_Type__c</fullName>
        <label>Input Type</label>
        <picklist>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Map_on_Events__c</fullName>
        <label>Map on Events</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled / Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out for Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Counter-Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Counter-Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__SIGN_Object_Mapping__c</fullName>
        <label>EchoSign Object Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Object_Mapping__c</referenceTo>
        <relationshipLabel>EchoSign Field Mappings</relationshipLabel>
        <relationshipName>Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Source__c</fullName>
        <label>Source Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <label>Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>EchoSign Form Field</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Constant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement Field</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EchoSign Field Mapping</label>
    <nameField>
        <label>Target Salesforce Field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EchoSign Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>